--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
       </script>
       <!-- End Google Tag Manager -->
 
-      <link rel="stylesheet" href="assets/css/style.css">
       <script>
         FontAwesomeConfig = { searchPseudoElements: true };
       </script>
-      <script defer src="./assets/js/lib/fontawesome-all.min.js"></script>
+      <script defer src="https://pro.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-DtPgXIYsUR6lLmJK14ZNUi11aAoezQtw4ut26Zwy9/6QXHH8W3+gjrRDT+lHiiW4"
+        crossorigin="anonymous"></script>
       <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
       <script src="https://www.google.com/recaptcha/api.js"></script>
     </head>
@@ -43,7 +43,6 @@
 
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 
 </html>
